--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,17 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="css/index.css" th:href="@{css/index.css}" rel='stylesheet' />
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <meta charset="UTF-8">
     <title>TravelAgency</title>
-
-
 
 </head>
 
@@ -32,6 +27,7 @@
                 <a class="nav-item nav-link" href="#">Qytetet</a>
                 <a class="nav-item nav-link" href="#">Ofertat</a>
                 <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+
             </div>
         </div>
 
@@ -40,10 +36,10 @@
             <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="btn btn-primary m-4" data-toggle="modal" data-target="#myRegisterModal" href="/user/register">Regjistrohu</a>
+                        <a class="btn btn-primary m-1" data-toggle="modal" data-target="#myRegisterModal" href="/user/register">Regjistrohu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary m-4" data-toggle="modal" data-target="#myLoginModal" href="/login/form">Logohu</a>
+                        <a class="btn btn-primary m-1" data-toggle="modal" data-target="#myLoginModal" href="/login/form">Logohu</a>
                     </li>
                 </ul>
             </div>
@@ -68,7 +64,7 @@
                     <!--   NQS USER ESTE ADMIN                 -->
                     <div th:if="${user.admin}">
                         <li  class="nav-item">
-                            <a class="nav-link" href="/logout">Funksionet Admin</a>
+                            <a class="nav-link" href="/admin/home">Funksionet Admin</a>
                         </li>
                     </div>
 
@@ -174,6 +170,10 @@
 
 
     </nav>
+
+    <div class="h-4 text-center">
+        <h2 th:text="${message}"></h2>
+    </div>
 
 
 
