--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,10 +23,7 @@
         <div class="collapse navbar-collapse">
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="#">Paketat <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Kontinentet</a>
-                <a class="nav-item nav-link" href="#">Qytetet</a>
-                <a class="nav-item nav-link" href="#">Ofertat</a>
-                <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-item nav-link" href="#">Ofertat E Fundit</a>
 
             </div>
         </div>
@@ -167,7 +164,6 @@
                 </div>
             </div>
         </div>
-
 
     </nav>
 
