--- a/src/main/resources/templates/admin_page.html
+++ b/src/main/resources/templates/admin_page.html
@@ -17,13 +17,26 @@
 </head>
 <body th:style="'background: url(/images/admin_background.jpg) no-repeat center center fixed;background-size: cover;'">
 
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Travel<span class="text-primary">Agency</span></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
+    <!-- PERMBAJTJA E NAVBARIT       -->
+    <div class="collapse navbar-collapse">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="/">Mbyll<span class="sr-only">(current)</span></a>
+        </div>
+    </div>
+
+</nav>
 <div class="container ">
 
     <div class="row pt-5 w-100 mx-auto">
 
         <!-- Packets Card  -->
-        <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
+        <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
             <div class="card p-4">
                 <div class="row">
                     <div class="col-6">
@@ -33,8 +46,8 @@
                         <div class="card-body px-0 pb-0">
                             <h5 class="card-title">Paketat</h5>
                             <p class="card-text">Administro Paketat</p>
-                            <a href="/admin/allPackets" class="btn btn-primary">Shiko Paketat</a>
-                            <a href="#" class="btn btn-primary">Shto Paketat</a>
+                            <a href="/packet/form" class="btn btn-primary">Shto Pakete</a>
+                            <a href="/packet/all" class="btn btn-primary">Shiko Paketat</a>
                         </div>
                     </div>
                 </div>
@@ -43,7 +56,7 @@
 
 
         <!-- Clients Card  -->
-        <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
+        <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
             <div class="card p-4">
                 <div class="row">
                     <div class="col-6">
@@ -53,7 +66,7 @@
                         <div class="card-body px-0 pb-0">
                             <h5 class="card-title">Klientet</h5>
                             <p class="card-text">Administrimi Klienteve</p>
-                            <a href="#" class="btn btn-primary">Vazhdo</a>
+                            <a href="/admin/users/all" class="btn btn-primary">Shiko Klientat</a>
                         </div>
                     </div>
                 </div>
@@ -62,7 +75,7 @@
 
 
         <!-- Cities Card  -->
-        <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
+        <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
             <div class="card p-4">
                 <div class="row">
                     <div class="col-6">
@@ -80,10 +93,28 @@
             </div>
         </div>
 
-
+        <!-- Countries Card  -->
+        <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
+            <div class="card p-4">
+                <div class="row">
+                    <div class="col-6">
+                        <img class="card-img-top img-fluid w-lg-75 w-md-50 w-100 text-center" src="/images/countries.jpg" alt="Card image cap"/>
+                    </div>
+                    <div class="col-12">
+                        <div class="card-body px-0 pb-0">
+                            <h5 class="card-title">Shtetet</h5>
+                            <p class="card-text">Adminstro Shtetet</p>
+                            <a href="/country/add/form" class="btn btn-primary">Shto Shtet</a>
+                            <a href="/country/all" class="btn btn-primary">Shtetet Ekzistuese</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
 </div>
+
 
 </body>
 </html>
