--- a/src/main/resources/templates/edit_user_form.html
+++ b/src/main/resources/templates/edit_user_form.html
@@ -11,51 +11,55 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <meta charset="UTF-8">
-    <title>[[${pageTitle}]]</title>
+    <title>Edit User</title>
 </head>
 
 
 
-<body th:style="'background: url(/images/paris.jpg) no-repeat center center fixed;background-size: cover;'">
-
+<body th:style="'background: url(/images/clients.jpg) no-repeat center center fixed;background-size: cover;'">
 
     <div class="container">
         <div class="row align-items-center vh-100">
             <div class="col-8 mx-auto">
                 <div class="card shadow border">
                     <div class="card-body d-flex flex-column align-items-center">
-                        <h1 class="text-center">[[${pageTitle}]]</h1>
+                        <h1 class="text-center">Edito Userin</h1>
 
-                        <form th:action="@{/city/save}" th:object="${city}" method="post">
-
+                        <form th:action="@{/admin/user/edited/save}" th:object="${user}" method="post">
+                            <!-- HIDDEN VARIABLES-->
                             <input type="hidden" th:field="*{id}">
-                            <!--VENDOS EMRIN E QYTETIT-->
+                            <input type="hidden" th:field="*{anonymous}">
+                            <input type="hidden" th:field="*{password}">
+
+                            <!--NAME INPUT-->
                             <div class="form-group row">
-                                <label class="col-form-label col-sm-4 font-weight-bold display-3">Emri Qytetit :</label>
+                                <label class="col-form-label col-sm-4 font-weight-bold display-3">Emri</label>
                                 <div class="col-sm-8">
                                     <input type="text" th:field="*{name}" class="form-control" required>
                                 </div>
                             </div>
-
-                            <!--VENDOS SHTETIN-->
-                            <div class="form-group row">
-                                <label class="col-form-label col-sm-4 font-weight-bold display-3"> Zgjidh Shtetin Perkates:</label>
-                                <div class="col-sm-8">
-                                    <select th:field="*{country}" class="form-control" required>
-                                        <th:block th:each="coun : ${countryList}">
-                                            <option th:text="${coun.name}" th:value="${coun.id}"></option>
-                                        </th:block>
-                                    </select>
-
-                                    <div class="text-center m-3">Neqoftese Shteti Nuk Gjendet Ju Lutem Shtojeni
-                                        <a href="/country/add/form">Ketu</a>
-                                    </div>
-                                    <div class="text-center p-3">
-                                        <button type="submit" class="btn btn-primary"> Ruaj Qytetin</button>
-                                        <a th:href="@{/admin/home}" class="btn btn-secondary"> Mbyll</a>
+                            <!-- RADIO BUTTONS -->
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-8">
+                                        <div class="custom-control custom-radio">
+                                            <input type="radio" name="btn_admin" th:field="*{admin}" th:value="1" class="custom-control-input" id="materialChecked">
+                                            <label class="custom-control-label" for="materialChecked">Admin</label>
+                                        </div>
+                                        <div class="custom-control custom-radio">
+                                            <input type="radio" name="btn_admin" th:field="*{admin}" th:value="0" class="custom-control-input" id="materialUnchecked">
+                                            <label class="custom-control-label" for="materialUnchecked"> User</label>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- BUTTONAT RUAJ-->
+                            <div class="text-center p-3">
+                                <button type="submit" class="btn btn-primary"> Ruaj Userin</button>
+                                <a th:href="@{/admin/home}" class="btn btn-secondary"> Mbyll</a>
+                            </div>
+
                         </form>
                     </div>
                 </div>
@@ -76,21 +80,25 @@
 
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <form  th:action="@{/country/save}" th:object="${country}" style="max-width: 600px; margin: 0 auto;" id="modal-add-country">
+                    <form  th:action="@{/country/save}" style="max-width: 600px; margin: 0 auto;" id="modal-add-country">
                         <div class="m-3">
                             <div class="form-group row">
                                 <label class="col-form-label col-sm-4"> Emri i Shtetit :</label>
                                 <div class="col-sm-8">
-                                    <input type="text" th:field="*{name}" class="form-control" required>
+                                    <input type="text" th:name="countryName" class="form-control" required>
                                 </div>
                             </div>
 
                             <div class="form-group row">
                                 <label class="col-form-label col-sm-8"> Zgjidh Kontinentin Perkates :</label>
-                                <select th:field="${continent}" id="continents">
-                                    <th:block th:each="cont : ${continentList}">
-                                        <option th:text="${cont.name}" th:value="${cont.id}"/>
-                                    </th:block>
+                                <select th:name="continentName" id="continents">
+                                    <option value="Europe">Europe</option>
+                                    <option value="Afrika">Afrika</option>
+                                    <option value="Azia">Azia</option>
+                                    <option value="Australia">Australia</option>
+                                    <option value="Antarktida">Antarktida</option>
+                                    <option value="Amerika Veriore">Amerika Veriore</option>
+                                    <option value="Amerika Jugore">Amerika Jugore</option>
                                 </select>
                             </div>
                         </div>
