--- a/src/main/resources/templates/admin_page.html
+++ b/src/main/resources/templates/admin_page.html
@@ -46,8 +46,8 @@
                         <div class="card-body px-0 pb-0">
                             <h5 class="card-title">Paketat</h5>
                             <p class="card-text">Administro Paketat</p>
-                            <a href="/packet/form" class="btn btn-primary">Shto Pakete</a>
-                            <a href="/packet/all" class="btn btn-primary">Shiko Paketat</a>
+                            <a href="/admin/packet/register" class="btn btn-primary">Shto Pakete</a>
+                            <a href="/admin/packet/all" class="btn btn-primary">Shiko Paketat</a>
                         </div>
                     </div>
                 </div>
@@ -85,8 +85,8 @@
                         <div class="card-body px-0 pb-0">
                             <h5 class="card-title">Qytetet</h5>
                             <p class="card-text">Adminstro Qytetet</p>
-                            <a href="/city/addform" class="btn btn-primary">Shto Qytet</a>
-                            <a href="/city/all" class="btn btn-primary">Qytetet Ekzistuese</a>
+                            <a href="/admin/city/register" class="btn btn-primary">Shto Qytet</a>
+                            <a href="/admin/cities/all" class="btn btn-primary">Qytetet Ekzistuese</a>
                         </div>
                     </div>
                 </div>
@@ -104,8 +104,8 @@
                         <div class="card-body px-0 pb-0">
                             <h5 class="card-title">Shtetet</h5>
                             <p class="card-text">Adminstro Shtetet</p>
-                            <a href="/country/add/form" class="btn btn-primary">Shto Shtet</a>
-                            <a href="/country/all" class="btn btn-primary">Shtetet Ekzistuese</a>
+                            <a href="/admin/country/register" class="btn btn-primary">Shto Shtet</a>
+                            <a href="/admin/country/all" class="btn btn-primary">Shtetet Ekzistuese</a>
                         </div>
                     </div>
                 </div>
