--- a/src/main/resources/templates/all_cities.html
+++ b/src/main/resources/templates/all_cities.html
@@ -31,7 +31,7 @@
                 <td th:text="${city.name}"></td>
                 <td th:text="${city.country.name}"></td>
                 <td>
-                    <a class="h4 mr-3" th:href="@{'/city/edit/' + ${city.id}}">Edito Qytetin</a>
+                    <a class="h4 mr-3" th:href="@{'/admin/city/edit/' + ${city.id}}">Edito Qytetin</a>
                 </td>
             </tr>
         </th:block>
