--- a/src/main/resources/templates/edit_user_form.html
+++ b/src/main/resources/templates/edit_user_form.html
@@ -18,103 +18,96 @@
 
 <body th:style="'background: url(/images/clients.jpg) no-repeat center center fixed;background-size: cover;'">
 
-    <div class="container">
-        <div class="row align-items-center vh-100">
-            <div class="col-8 mx-auto">
-                <div class="card shadow border">
-                    <div class="card-body d-flex flex-column align-items-center">
-                        <h1 class="text-center">Edito Userin</h1>
+<div class="container">
+    <div class="row align-items-center vh-100">
+        <div class="col-8 mx-auto">
+            <div class="card shadow border">
+                <div class="card-body d-flex flex-column align-items-center">
+                    <h1 class="text-center">Edito Userin</h1>
 
-                        <form th:action="@{/admin/user/edited/save}" th:object="${user}" method="post">
-                            <!-- HIDDEN VARIABLES-->
-                            <input type="hidden" th:field="*{id}">
-                            <input type="hidden" th:field="*{anonymous}">
-                            <input type="hidden" th:field="*{password}">
+                    <form th:action="@{/admin/user/save}" th:object="${user}" method="post">
+                        <!-- HIDDEN VARIABLES-->
+                        <input type="hidden" th:field="*{id}">
+                        <input type="hidden" th:field="*{password}">
 
-                            <!--NAME INPUT-->
-                            <div class="form-group row">
-                                <label class="col-form-label col-sm-4 font-weight-bold display-3">Emri</label>
-                                <div class="col-sm-8">
-                                    <input type="text" th:field="*{name}" class="form-control" required>
-                                </div>
-                            </div>
-                            <!-- RADIO BUTTONS -->
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-8">
-                                        <div class="custom-control custom-radio">
-                                            <input type="radio" name="btn_admin" th:field="*{admin}" th:value="1" class="custom-control-input" id="materialChecked">
-                                            <label class="custom-control-label" for="materialChecked">Admin</label>
-                                        </div>
-                                        <div class="custom-control custom-radio">
-                                            <input type="radio" name="btn_admin" th:field="*{admin}" th:value="0" class="custom-control-input" id="materialUnchecked">
-                                            <label class="custom-control-label" for="materialUnchecked"> User</label>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- BUTTONAT RUAJ-->
-                            <div class="text-center p-3">
-                                <button type="submit" class="btn btn-primary"> Ruaj Userin</button>
-                                <a th:href="@{/admin/home}" class="btn btn-secondary"> Mbyll</a>
-                            </div>
-
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!--  DIALOGU MODAL edito qyetetin-->
-    <div class="modal" id="myAddCountryModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <h4 class="modal-title">Ju Lutem Vendosni Shtetin Edhe Kontinentin Perkates</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-
-                <!-- Modal body -->
-                <div class="modal-body">
-                    <form  th:action="@{/country/save}" style="max-width: 600px; margin: 0 auto;" id="modal-add-country">
-                        <div class="m-3">
-                            <div class="form-group row">
-                                <label class="col-form-label col-sm-4"> Emri i Shtetit :</label>
-                                <div class="col-sm-8">
-                                    <input type="text" th:name="countryName" class="form-control" required>
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <label class="col-form-label col-sm-8"> Zgjidh Kontinentin Perkates :</label>
-                                <select th:name="continentName" id="continents">
-                                    <option value="Europe">Europe</option>
-                                    <option value="Afrika">Afrika</option>
-                                    <option value="Azia">Azia</option>
-                                    <option value="Australia">Australia</option>
-                                    <option value="Antarktida">Antarktida</option>
-                                    <option value="Amerika Veriore">Amerika Veriore</option>
-                                    <option value="Amerika Jugore">Amerika Jugore</option>
-                                </select>
+                        <!--NAME INPUT-->
+                        <div class="form-group row">
+                            <label class="col-form-label col-sm-4 font-weight-bold display-3">Emri</label>
+                            <div class="col-sm-8">
+                                <input type="text" th:field="*{name}" class="form-control" required>
                             </div>
                         </div>
+                        <!-- RADIO BUTTONS -->
+                        <div class="form-check">
+                            <th:block th:each="rol: ${rolet}">
+                                <input  name="checkbuton" class="form-check-input" type="checkbox" th:field="*{roles}" th:text="${rol.name}" th:value="${rol.id}" id="flexCheckDefault"/>
+                                <label class="form-check-label" for="flexCheckDefault"></label>
+                            </th:block>
+                        </div>
+
+
+
+                        <!-- BUTTONAT RUAJ-->
+                        <div class="text-center p-3">
+                            <button type="submit" class="btn btn-primary"> Ruaj Userin</button>
+                            <a th:href="@{/admin/home}" class="btn btn-secondary"> Mbyll</a>
+                        </div>
+
                     </form>
                 </div>
-
-                <!-- Modal footer -->
-                <div class="modal-footer">
-                    <div class="text-center p-3">
-                        <button type="submit" class="btn btn-primary" form="modal-add-country"> Ruaj</button>
-                    </div>
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Mbyll</button>
-                </div>
-
             </div>
         </div>
     </div>
+</div>
+
+<!--  DIALOGU MODAL edito qyetetin-->
+<div class="modal" id="myAddCountryModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">Ju Lutem Vendosni Shtetin Edhe Kontinentin Perkates</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+                <form  th:action="@{/country/save}" style="max-width: 600px; margin: 0 auto;" id="modal-add-country">
+                    <div class="m-3">
+                        <div class="form-group row">
+                            <label class="col-form-label col-sm-4"> Emri i Shtetit :</label>
+                            <div class="col-sm-8">
+                                <input type="text" th:name="countryName" class="form-control" required>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label class="col-form-label col-sm-8"> Zgjidh Kontinentin Perkates :</label>
+                            <select th:name="continentName" id="continents">
+                                <option value="Europe">Europe</option>
+                                <option value="Afrika">Afrika</option>
+                                <option value="Azia">Azia</option>
+                                <option value="Australia">Australia</option>
+                                <option value="Antarktida">Antarktida</option>
+                                <option value="Amerika Veriore">Amerika Veriore</option>
+                                <option value="Amerika Jugore">Amerika Jugore</option>
+                            </select>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <div class="text-center p-3">
+                    <button type="submit" class="btn btn-primary" form="modal-add-country"> Ruaj</button>
+                </div>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Mbyll</button>
+            </div>
+
+        </div>
+    </div>
+</div>
 </body>
 </html>
