--- a/src/main/resources/templates/add_country_form.html
+++ b/src/main/resources/templates/add_country_form.html
@@ -18,40 +18,40 @@
 
 <body th:style="'background: url(/images/countries.jpg) no-repeat center center fixed;background-size: cover;'">
 
-    <div class="container">
-        <div class="row align-items-center vh-100">
-            <div class="col-8 mx-auto">
-                <div class="card shadow border">
-                    <div class="card-body d-flex flex-column align-items-center">
-                        <h1 class="text-center">Shto Shtet</h1>
+<div class="container">
+    <div class="row align-items-center vh-100">
+        <div class="col-8 mx-auto">
+            <div class="card shadow border">
+                <div class="card-body d-flex flex-column align-items-center">
+                    <h1 class="text-center">Shto Shtet</h1>
 
-                        <form th:action="@{/country/save}" th:object="${country}" method="post">
+                    <form th:action="@{/admin/country/save}" th:object="${country}" method="post">
 
-                            <!--NAME INPUT-->
-                            <div class="form-group">
-                                <label for="cName">Emri</label>
-                                <input type="text" id="cName" th:field="*{name}" class="form-control" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="cont">Kontinenti</label>
-                                <select id="cont" th:field="*{continent}" class="form-control" required>
-                                    <th:block th:each="coontinent : ${allContinents}">
-                                        <option th:text="${coontinent.name}" th:value="${coontinent.id}"></option>
-                                    </th:block>
-                                </select>
-                            </div>
+                        <!--NAME INPUT-->
+                        <div class="form-group">
+                            <label for="cName">Emri</label>
+                            <input type="text" id="cName" th:field="*{name}" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="cont">Kontinenti</label>
+                            <select id="cont" th:field="*{continent}" class="form-control" required>
+                                <th:block th:each="coontinent : ${allContinents}">
+                                    <option th:text="${coontinent.name}" th:value="${coontinent.id}"></option>
+                                </th:block>
+                            </select>
+                        </div>
 
-<!--                            BUTONI-->
-                            <div class="text-center p-3">
-                                <button type="submit" class="btn btn-primary"> Ruaj Qytetin</button>
-                                <a href="/admin/home" class="btn btn-secondary"> Mbyll</a>
-                            </div>
-                        </form>
-                    </div>
+                        <!--                            BUTONI-->
+                        <div class="text-center p-3">
+                            <button type="submit" class="btn btn-primary"> Ruaj Qytetin</button>
+                            <a href="/admin/home" class="btn btn-secondary"> Mbyll</a>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
 </body>
 </html>
