--- a/src/main/resources/templates/all_countries.html
+++ b/src/main/resources/templates/all_countries.html
@@ -31,7 +31,7 @@
                 <td th:text="${country.name}"></td>
                 <td th:text="${country.continent.name}"></td>
                 <td>
-                    <a class="h4 mr-3" th:href="@{'/country/edit/' + ${country.id}}">Edito Shtetin</a>
+                    <a class="h4 mr-3" th:href="@{'/admin/country/edit/' + ${country.id}}">Edito Shtetin</a>
                 </td>
             </tr>
         </th:block>
